--- a/src/modules/pg/components/PGNft/_style.scss
+++ b/src/modules/pg/components/PGNft/_style.scss
@@ -40,6 +40,7 @@
     }
 
     &__backdrop {
+        display: none;
         position: absolute;
         width: 220px;
         height: 330px;
@@ -71,6 +72,7 @@
         }
 
         &__backdrop {
+            display: block;
             width: 285px;
             height: 389px;
             transform: matrix(0.94, -0.76, 0.24, 0.84, 0, 0);
